--- a/src/components/Modal/mobile.scss
+++ b/src/components/Modal/mobile.scss
@@ -19,7 +19,7 @@
     .comment {
       margin-bottom: 20px;
       .date {
-        font-family: Roboto;
+        font-family: Roboto, serif;
         font-style: normal;
         font-weight: normal;
         font-size: 13px;
@@ -28,7 +28,7 @@
         color: #999999;
       }
       p {
-        font-family: Roboto;
+        font-family: Roboto, serif;
         font-style: normal;
         font-weight: normal;
         font-size: 13px;
@@ -49,7 +49,7 @@
   }
   .modal__close {
     position: absolute;
-    left:89%;
+    left:95%;
     top:2%;
 
   }
